--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,11 +17,27 @@
   <div class="container mt-3">
     <form action="/login" method="POST">
       <div class="form-group">
-        <label>로그인 페이지</label>
+        <label>아이디</label>
         <input type="text" class="form-control" name="id">
       </div>
       <div class="form-group">
-        <label>날짜</label>
+        <label>비밀번호</label>
+        <input type="password" class="form-control" name="pw">
+      </div>
+      <button type="submit" class="btn btn-outline-secondary">Submit</button>
+    </form>
+  </div>
+
+  <h4 class="container mt-4"><strong>회원가입</strong></h4>
+
+  <div class="container mt-3">
+    <form action="/register" method="POST">
+      <div class="form-group">
+        <label>아이디</label>
+        <input type="text" class="form-control" name="id">
+      </div>
+      <div class="form-group">
+        <label>비밀번호</label>
         <input type="password" class="form-control" name="pw">
       </div>
       <button type="submit" class="btn btn-outline-secondary">Submit</button>
