--- a/views/list.ejs
+++ b/views/list.ejs
@@ -35,6 +35,7 @@
               <h4>todo title: <%= posts[i].title %></h4>
               <p>todo date: <%= posts[i].date %></p>
               <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">삭제</button>
+              <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">채팅</button>
             </li>
           <% } %>
         </ul>
