--- a/views/list.ejs
+++ b/views/list.ejs
@@ -34,8 +34,8 @@
             <li class="list-group-item">
               <h4>todo title: <%= posts[i].title %></h4>
               <p>todo date: <%= posts[i].date %></p>
-              <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">삭제</button>
-              <button class="btn btn-secondary chat" data-id="<%= posts[i].author %>">채팅</button>
+              <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">delete</button>
+              <button class="btn btn-secondary chat" data-id="<%= posts[i].author %>">chat create</button>
             </li>
           <% } %>
         </ul>
