--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,17 +12,17 @@
     <!-- 헤더 -->
     <%- include('nav.html') %>
 
-  <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
+  <h4 class="container mt-4"><strong>Post Page</strong></h4>
 
   <div class="container mt-3">
     <form action="/edit?_method=PUT" method="POST">
       <div class="form-group">
-        <label>오늘의 할일</label>
+        <label>Todo</label>
         <input text="text" value="<%= post._id %>" name="id" style="display: none;">
         <input value="<%= post.title %>" type="text" class="form-control" name="title">
       </div>
       <div class="form-group">
-        <label>날짜</label>
+        <label>date</label>
         <input value="<%= post.date %>" type="text" class="form-control" name="date">
       </div>
       <button type="submit" class="btn btn-outline-secondary">Submit</button>
