--- a/views/list.ejs
+++ b/views/list.ejs
@@ -18,7 +18,7 @@
 
       <div class="container input-group mb-2">
         <input class="form-control" id="search-input">
-        <button class="input-group-append btn btn-danger" id="search">검색</button>
+        <button class="input-group-append btn btn-danger" id="search">search</button>
       </div>
 
       <script>
