--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-    <!-- 헤더 -->
+    <!-- header -->
     <%- include('nav.html') %>
 
   <h4 class="container mt-4"><strong>Post Page</strong></h4>
