--- a/views/search.ejs
+++ b/views/search.ejs
@@ -18,7 +18,7 @@
 
       <div class="container input-group mb-2">
         <input class="form-control" id="search-input">
-        <button class="input-group-append btn btn-danger" id="search">검색</button>
+        <button class="input-group-append btn btn-danger" id="search">search</button>
       </div>
 
       <script>
@@ -34,7 +34,7 @@
             <li class="list-group-item">
               <h4>todo title: <%= posts[i].title %></h4>
               <p>todo date: <%= posts[i].date %></p>
-              <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">삭제</button>
+              <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">delete</button>
             </li>
           <% } %>
         </ul>
