--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,7 +12,7 @@
   <!-- 헤더 -->
   <%- include('nav.html') %>
 
-  <h4 class="container mt-4"><strong><%= user.id %> 마이 페이지</strong></h4>
+  <h4 class="container mt-4"><strong><%= user.id %> my page</strong></h4>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
