--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-  <!-- 헤더 -->
+  <!-- header -->
   <%- include('nav.html') %>
 
   <h4 class="container mt-4"><strong>login page</strong></h4>
