--- a/views/write.ejs
+++ b/views/write.ejs
@@ -12,12 +12,12 @@
   <!-- header -->
   <%- include('nav.html') %>
 
-  <h4 class="container mt-4"><strong>post create page</strong></h4>
+  <h4 class="container mt-4"><strong>Post create page</strong></h4>
 
   <div class="container mt-3">
     <form action="/add" method="POST">
       <div class="form-group">
-        <label>todo</label>
+        <label>TODO</label>
         <input type="text" class="form-control" name="title">
       </div>
       <div class="form-group">
