--- a/views/write.ejs
+++ b/views/write.ejs
@@ -21,7 +21,7 @@
         <input type="text" class="form-control" name="title">
       </div>
       <div class="form-group">
-        <label>date</label>
+        <label>Date</label>
         <input type="text" class="form-control" name="date">
       </div>
       <button type="submit" class="btn btn-outline-secondary">Submit</button>
